# interpro_db_loader

./: Cargo.toml  README.md
src/: main.rs
