[package]
name = "build_interpro_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
xml-rs = "0.8"
indicatif = "0.17.5"
csv = "1.2.2"
